mudando a hero para a BlackFriday

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -49,61 +49,44 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MVB5S6BK"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    
-    <!-- logo -->
-    <header class="site-header">
-        <div class="site-header__wrap">
-            <a href="#hero" class="site-header__logo">
-                <img src="./imagens/Group 633186.png" alt="Logo da empresa" width="100" height="auto">
-            </a>
-
-            <!-- Botão hambúrguer (mobile) -->
-            <button
-                class="site-header__toggle"
-                type="button"
-                aria-label="Abrir menu"
-                aria-expanded="false"
-                aria-controls="mainNav">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-
-            <!-- Menu -->
-            <nav class="site-header__nav" id="mainNav" aria-label="Navegação principal">
-                <ul>
-                    <li><a href="#metodologia">Método</a></li>
-                    <li><a href="#como-funciona">Como funciona</a></li>
-                    <li><a href="#para-quem-e">Para quem é</a></li>
-                    <li><a href="#faq">Dúvidas</a></li>
-                    <li>
-                        <div>
-                            <a href="#formularioLP" class="site-header__nav-cta">
-                                Garantir meu acesso
-                            </a>
-                        </div>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </header>
 
     <!-- 1) Hero -->
-    <section id="hero">
+    <section id="hero" class="hero--bf">
         <div class="hero-wrap">
+            <!-- Badge Black Friday -->
+            <div class="hero-badge">
+                🔥 BLACK FRIDAY ACADEMY CARDS — desconto por tempo limitado
+            </div>
+
             <div class="texto-imagem">
                 <div class="hero-texto">
-                    <h1>Comece sua revisão para o <span class="destaque">ENEM</span> do zero com o <span class="destaque">MELHOR</span> app do Brasil</h1>
-                    <p class="hero-sub">Acesse <strong>+15.000 flashcards</strong> organizados por matéria e tópico, com revisão inteligente, para estudar em <strong>15–30 minutos por dia</strong>, onde e quando quiser.</p>
+                    <h1>
+                        <span class="destaque">Black Friday</span>
+                        na Academy Cards.
+                        Revise toda matéria do
+                        <span class="destaque">ENEM</span>:
+                        com <span class="hero-desconto">até XX% OFF</span>
+                    </h1>
+
+                    <p class="hero-sub">
+                        Só até <strong>DD/MM</strong>:
+                        acesso a <strong>+15.000 flashcards</strong> organizados por matéria e tópico,
+                        com revisão inteligente, para estudar em
+                        <strong>15–30 minutos por dia</strong>, onde e quando quiser —
+                        pagando <strong>bem menos na Black Friday</strong>.
+                    </p>
                 </div>
-                <!-- Imagem no Hero (opcional, ver item 2) -->
+
+                <!-- Imagem no Hero -->
                 <figure class="hero-imagem">
-                    <!-- troque o src pela imagem real: de preferência a tela de Revisões -->
-                    <img src="imagens/foto-hero.png" alt="Tela de revisão do Academy Cards mostrando uma carta para revisar" />
+                    <img src="imagens/foto-hero.png"
+                        alt="Tela de revisão do Academy Cards mostrando uma carta para revisar" />
                 </figure>
             </div>
 
-            <p class="hero-cta"><a href="#formularioLP">Quero minha aprovação</a></p>
+            <p class="hero-cta">
+                <a href="#formularioLP">Ativar meu desconto de Black Friday</a>
+            </p>
         </div>
     </section>
 
