ajuste CTAs, texto do hero e scripts de traqueamento

--- a/index.html
+++ b/index.html
@@ -3,19 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Revisões espaçadas com 12.000+ flashcards do ENEM. Acesso grátis até 31/12.">
-    <title>Academy Cards — Flashcards para ENEM com revisão inteligente</title>
+    <meta name="description" content="Aproveite a Black Friday da Academy Cards: 50% OFF no app de flashcards com +15.000 cartas para o ENEM, revisão espaçada inteligente e métricas de estudo. Oferta por tempo limitado.">
+    <title>Black Friday Academy Cards — 50% OFF no app de flashcards para o ENEM</title>
     <link rel="stylesheet" href="style/estilos.css">
     <link rel="stylesheet" href="style/media-queries.css">
     <link rel="icon" href="./imagens/fundo-branco-stroke-preto2.ico" type="image/x-icon">
-
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id=GTM-MVB5S6BK'+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-MVB5S6BK');</script>
-    <!-- End Google Tag Manager -->
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -74,9 +66,9 @@
                 <div class="hero-texto">
                     <h1>
                         <span class="hero-bf-fire__text">Black Friday</span><br>
-                        na Academy Cards.<br>
-                        Estude para o
-                        <span class="destaque">ENEM</span>:<br>
+                        na Academy Cards: garanta
+                        sua aprovação no
+                        <span class="destaque">ENEM 2026</span>
                         com <span class="hero-desconto"> 50% OFF</span>
                     </h1>
 
@@ -511,35 +503,38 @@
             </header>
 
             <div class="planos-grid">
-                <!-- PLANO MENSAL -->
+                <!-- PLANO ANUAL -->
                 <article class="plano-card__container">
-                    <article class="plano-card plano-card--mensal">
+                    <article class="plano-card plano-card--anual">
                         <div class="plano-card__top">
-                            <span class="plano-card__tag">MENSAL</span>
-                            <span class="plano-card__badge-oferta">-50%</span>
+                            <span class="plano-card__tag">ANUAL</span>
+                            <span class="plano-card__badge-oferta plano-card__badge-oferta--destaque">-50%</span>
                         </div>
                         <div class="plano-card__body">
-                            <!-- Bloco de preço com de/por + selo -->
                             <div class="plano-card__price-box">
                                 <div class="plano-card__price-col">
                                     <p class="plano-card__price-old">
-                                        De <span class="plano-card__strike">R$ 73,90</span> por apenas:
+                                        De <span class="plano-card__strike">R$ 504,84</span> por apenas:
                                     </p>
                                     <p class="plano-card__price">
-                                        R$ 36,95 <span class="plano-card__per">/mês</span>
+                                        <span class="plano-card__times">12x de</span> R$ 21,04
                                     </p>
                                     <p class="plano-card__total">
-                                        50% OFF na sua mensalidade na Black Friday.
+                                        Total de R$ 252,48 no ano (50% OFF).
                                     </p>
                                 </div>
                             </div>
+
                             <ul class="plano-card__list">
-                                <li>Acesso a +15.000 flashcards organizados por tema</li>
-                                <li>Revisões programadas com algoritmo personalizado</li>
-                                <li>Conteúdo revisado por +30 professores especialistas</li>
-                                <li>Métricas de desempenho e progresso visual</li>
-                                <li>Suporte e atualizações inclusas</li>
-                                <li>Foco total no ENEM e vestibulares</li>
+                                <li>Tudo do plano mensal</li>
+                                <li>Economia máxima em relação ao plano mensal ao longo de 12 meses*</li>
+                            </ul>
+
+                            <p class="bonus"><strong>🎁 Bônus exclusivo:</strong></p>
+                            <ul class="plano-card__list">
+                                <li>E-book de redação com +30 temas comentados</li>
+                                <li>Acesso a grupo exclusivo no Telegram</li>
+                                <li>Conteúdos inéditos lançados semanalmente no grupo</li>
                             </ul>
                         </div>
                     </article>
@@ -582,42 +577,40 @@
                     </article>
                 </article>
 
-                <!-- PLANO ANUAL -->
+                <!-- PLANO MENSAL -->
                 <article class="plano-card__container">
-                    <article class="plano-card plano-card--anual">
+                    <article class="plano-card plano-card--mensal">
                         <div class="plano-card__top">
-                            <span class="plano-card__tag">ANUAL</span>
-                            <span class="plano-card__badge-oferta plano-card__badge-oferta--destaque">-50%</span>
+                            <span class="plano-card__tag">MENSAL</span>
+                            <span class="plano-card__badge-oferta">-50%</span>
                         </div>
                         <div class="plano-card__body">
+                            <!-- Bloco de preço com de/por + selo -->
                             <div class="plano-card__price-box">
                                 <div class="plano-card__price-col">
                                     <p class="plano-card__price-old">
-                                        De <span class="plano-card__strike">R$ 504,84</span> por apenas:
+                                        De <span class="plano-card__strike">R$ 73,90</span> por apenas:
                                     </p>
                                     <p class="plano-card__price">
-                                        <span class="plano-card__times">12x de</span> R$ 21,04
+                                        R$ 36,95 <span class="plano-card__per">/mês</span>
                                     </p>
                                     <p class="plano-card__total">
-                                        Total de R$ 252,48 no ano (50% OFF).
+                                        50% OFF na sua mensalidade na Black Friday.
                                     </p>
                                 </div>
                             </div>
-
                             <ul class="plano-card__list">
-                                <li>Tudo do plano mensal</li>
-                                <li>Economia máxima em relação ao plano mensal ao longo de 12 meses*</li>
-                            </ul>
-
-                            <p class="bonus"><strong>🎁 Bônus exclusivo:</strong></p>
-                            <ul class="plano-card__list">
-                                <li>E-book de redação com +30 temas comentados</li>
-                                <li>Acesso a grupo exclusivo no Telegram</li>
-                                <li>Conteúdos inéditos lançados semanalmente no grupo</li>
+                                <li>Acesso a +15.000 flashcards organizados por tema</li>
+                                <li>Revisões programadas com algoritmo personalizado</li>
+                                <li>Conteúdo revisado por +30 professores especialistas</li>
+                                <li>Métricas de desempenho e progresso visual</li>
+                                <li>Suporte e atualizações inclusas</li>
+                                <li>Foco total no ENEM e vestibulares</li>
                             </ul>
                         </div>
                     </article>
                 </article>
+
             </div>
 
             <p class="ofx__btn"><a href="#formularioLP">Quero garantir meu acesso com desconto</a></p>
@@ -897,19 +890,19 @@
     <!-- 11) Rodapé -->
     <footer>
         <section class="footer-content">
-            <div class="footer-logo">
-                <img src="imagens/Group 633154.png" alt="Logo Lâmpada" loading="lazy" width="50px" height="auto">
-            </div>
             <div class="redes-sociais">
                 <a href="https://www.instagram.com/academy.cards?igsh=MXF3d2k2YWd4NWVleQ%3D%3D&utm_source=qr" target="_blank" rel="noopener noreferrer">
-                    <img src="https://academy-cards-imagens-publicas.s3.us-east-1.amazonaws.com/redes/instagram_branco_circular.png" alt="Instagram" loading="lazy" width="32px" height="auto">
+                    <img src="https://academy-cards-imagens-publicas.s3.us-east-1.amazonaws.com/redes/instagram_branco_circular.png" alt="Instagram" loading="lazy" width="38px" height="auto">
                 </a>
                 <a href="https://www.tiktok.com/@academy.cards?is_from_webapp=1&sender_device=pc" target="_blank" rel="noopener noreferrer">
-                    <img src="https://academy-cards-imagens-publicas.s3.us-east-1.amazonaws.com/redes/tiktok_branco_circular.png" alt="Tiktok" loading="lazy" width="32px" height="auto">
+                    <img src="https://academy-cards-imagens-publicas.s3.us-east-1.amazonaws.com/redes/tiktok_branco_circular.png" alt="Tiktok" loading="lazy" width="38px" height="auto">
                 </a>
                 <a href="https://www.facebook.com/academycards/" target="_blank" rel="noopener noreferrer">
-                    <img src="https://academy-cards-imagens-publicas.s3.us-east-1.amazonaws.com/redes/facebook_branco_circular.png" alt="Facebook" loading="lazy" width="32px" height="auto">
+                    <img src="https://academy-cards-imagens-publicas.s3.us-east-1.amazonaws.com/redes/facebook_branco_circular.png" alt="Facebook" loading="lazy" width="38px" height="auto">
                 </a>
+            </div>
+            <div class="footer-logo">
+                <img src="imagens/Group 633154.png" alt="Logo Lâmpada" loading="lazy" width="50px" height="auto">
             </div>
         </section>
         <p class="copyright">© 2024 Academy Cards. Todos os direitos reservados.</p>
