ajustes para form no RD

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
 
             <p class="hero-cta">
-                <a href="#formularioLP">Ativar meu desconto de Black Friday</a>
+                <a href="#formularioLP-blackfriday">Ativar meu desconto de Black Friday</a>
             </p>
         </div>
     </section>
@@ -131,7 +131,7 @@
                 </div>
 
             </div>
-            <p class="pv-cta"><a href="#formularioLP">Quero estudar com flashcards</a></p>
+            <p class="pv-cta"><a href="#formularioLP-blackfriday">Quero estudar com flashcards</a></p>
         </div>
     </section>
 
@@ -294,7 +294,7 @@
             </ol>
         </div>
 
-        <p class="cf-cta"><a href="#formularioLP">Quero testar essa metodologia</a></p>   
+        <p class="cf-cta"><a href="#formularioLP-blackfriday">Quero testar essa metodologia</a></p>   
     </section>
 
     <!-- 5) Exemplo flashcard -->
@@ -322,7 +322,7 @@
                 </label>
             </div>
 
-            <p class="flip-cta"><a href="#formularioLP">Quero revisar com qualidade</a></p>
+            <p class="flip-cta"><a href="#formularioLP-blackfriday">Quero revisar com qualidade</a></p>
         </div>
     </section>
 
@@ -424,7 +424,7 @@
                 </div>
             </div>
 
-            <p class="ps-cta"><a href="#formularioLP">Entrar no time dos aprovados</a></p>
+            <p class="ps-cta"><a href="#formularioLP-blackfriday">Entrar no time dos aprovados</a></p>
         </div>
     </section>
 
@@ -487,7 +487,7 @@
                 </li>
             </ol>
 
-            <p class="pqe-map__cta"><a href="#formularioLP">esse app é para mim</a></p>
+            <p class="pqe-map__cta"><a href="#formularioLP-blackfriday">esse app é para mim</a></p>
         </div>
     </section>
 
@@ -613,7 +613,7 @@
 
             </div>
 
-            <p class="ofx__btn"><a href="#formularioLP">Quero garantir meu acesso com desconto</a></p>
+            <p class="ofx__btn"><a href="#formularioLP-blackfriday">Quero garantir meu acesso com desconto</a></p>
         </div>
     </section>
 
@@ -621,13 +621,13 @@
     <div id="form-garantia-container">
         <div class="form-garantia">
             <!-- 9) Formulário -->
-            <section id="formularioLP" class="formx" aria-labelledby="formx-title">
+            <section id="formularioLP-blackfriday" class="formx" aria-labelledby="formx-title">
                 <div class="formx__wrap">
                     <header class="formx__header">
                         <h2 id="formx-title">Garantir meu acesso</h2>
                         <p class="formx__lead">Preencha seus dados para seguir para o pagamento.</p>
                     </header>
-                    <form id="lp_pagamento_teste" method="post" action="" target="noop">
+                    <form id="lp_blackfriday_teste" method="post" action="" target="noop">
                         <!-- Honeypot (anti-bot) -->
                         <label class="formx__hp" aria-hidden="true">Não preencha
                             <input type="text" name="hp_website" tabindex="-1" autocomplete="off">
@@ -652,8 +652,8 @@
         
                         <!-- Identificador da conversão (você pode manter este valor) -->
                         <input type="hidden" name="token_rdstation" value="e67b465e4be3b340f3e29611d499c2d6">
-                        <input type="hidden" name="conversion_identifier" value="lp_pagamento_teste">
-                        <input type="hidden" name="identificador" value="lp_pagamento_teste">
+                        <input type="hidden" name="conversion_identifier" value="lp_blackfriday_teste">
+                        <input type="hidden" name="identificador" value="lp_blackfriday_teste">
                         <p class="formx__cta">
                             <button class="formx__btn" type="submit">Garantir meu acesso</button>
                         </p>
@@ -883,7 +883,7 @@
                 </details>
             </div>
 
-            <p class="faqx__cta"><a href="#formularioLP">Quero garantir meu acesso</a></p>
+            <p class="faqx__cta"><a href="#formularioLP-blackfriday">Quero garantir meu acesso</a></p>
         </div>
     </section>
 
@@ -1026,7 +1026,7 @@
     <!-- UX opcional para o formulário nativo -->
     <script>
         (function(){
-            const form = document.querySelector('form#lp_pagamento_teste');
+            const form = document.querySelector('form#lp_blackfriday_teste');
             if (!form) return;
 
             // 🔗 URL da página de compra
