destaque plano anual

--- a/index.html
+++ b/index.html
@@ -504,11 +504,10 @@
 
             <div class="planos-grid">
                 <!-- PLANO ANUAL -->
-                <article class="plano-card__container">
+                <article class="plano-card__container--destaque">
                     <article class="plano-card plano-card--anual">
                         <div class="plano-card__top">
                             <span class="plano-card__tag">ANUAL</span>
-                            <span class="plano-card__badge-oferta plano-card__badge-oferta--destaque">-50%</span>
                         </div>
                         <div class="plano-card__body">
                             <div class="plano-card__price-box">
